[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-tools"
version = "0.1.0"
description = "CLI toolkit for MCP servers — create, test, publish and manage Model Context Protocol servers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "AiAgentKarl"}]
keywords = ["mcp", "cli", "agent", "model-context-protocol", "create", "scaffold"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/mcp-tools"
Repository = "https://github.com/AiAgentKarl/mcp-tools"

[project.scripts]
mcp-tools = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
